[metadata]
name = fhs-wijnen
version = 0.1
author = Bas Wijnen
author_email = wijnen@debian.org
description = module for using the FHS and XDG basedir paths.
long_description = README
long_description_content_type = text/plain
license = AGPL3+
url = https://github.com/wijnen/python-fhs
project_urls =
	Bug Tracker = https://github.com/wijnen/python-fhs/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: AGPL3+
	Operating System :: OS Independent

[options]
py_modules = fhs
python_requires = >=3
