[metadata]
name = fhs-paths
version = 0.1
author = Bas Wijnen
author_email = wijnen@debian.org
description = module for using the FHS and XDG basedir paths.
long_description = file:README
long_description_content_type = text/plain
license = AGPL3+
license_file = debian/copyright
url = https://github.com/wijnen/python-fhs
project_urls =
	Bug Tracker = https://github.com/wijnen/python-fhs/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Intended Audience :: Developers
	Development Status :: 4 - Beta
	Operating System :: OS Independent

[options]
py_modules = fhs
python_requires = >=3
